tests/errors/syntax/missing_jmp_label.odl
main :: () -> void {
    do:something {
        break: 10;
    };
};